<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignup"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLogin"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:padding="@dimen/_20sdp"
            android:text="@string/btn_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            app:backgroundTint="@color/purple_700"
            app:cornerRadius="@dimen/_5sdp" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:padding="@dimen/_20sdp"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_15ssp"
            app:backgroundTint="@color/colorPink"
            app:cornerRadius="@dimen/_5sdp" />

        <TextView
            android:id="@+id/tvAdminLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/admin_login"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />


    </RelativeLayout>
</layout>